--- a/src/pages/painel-controle-adm/painel-controle-adm/painel-controle-adm.html
+++ b/src/pages/painel-controle-adm/painel-controle-adm/painel-controle-adm.html
@@ -10,6 +10,6 @@
         <ion-tab tabIcon="settings"  tabTitle="Perfis" [root]="perfilListPage"></ion-tab>
         <ion-tab tabIcon="people"   tabTitle="Grupos" [root]="grupoUsuarioPage"></ion-tab>
         <ion-tab tabIcon="bookmarks"  tabTitle="Catalogo" [root]="catalogoProdutosPage"></ion-tab>
-        <ion-tab tabIcon="water"  tabTitle="Distribuidoras" [root]="painelControleDistribuidorPage" tabBadge="10" tabBadgeStyle="customColor2" ></ion-tab>
+        <ion-tab tabIcon="water"  tabTitle="Distribuidoras" [root]="painelControleDistribuidorPage" tabBadge="{{distribuidorNaoHomoloado}}" tabBadgeStyle="danger" ></ion-tab>
       </ion-tabs>
 </ion-content>
