Painel da distribuidora iniciada

--- a/src/pages/painel-controle-adm/painel-controle-adm/painel-controle-adm.html
+++ b/src/pages/painel-controle-adm/painel-controle-adm/painel-controle-adm.html
@@ -1,15 +1,16 @@
 <ion-header class="content-desktop">
-    
+
   <ion-navbar>
     <ion-title>Painel de Controle Administrativo</ion-title>
   </ion-navbar>
 
 </ion-header>
 <ion-content class="tab-desktop">
-    <ion-tabs  color="customColor1" >
-        <ion-tab tabIcon="settings"  tabTitle="Perfis" [root]="perfilListPage"></ion-tab>
-        <ion-tab tabIcon="people"   tabTitle="Grupos" [root]="grupoUsuarioPage"></ion-tab>
-        <ion-tab tabIcon="bookmarks"  tabTitle="Catalogo" [root]="catalogoProdutosPage"></ion-tab>
-        <ion-tab tabIcon="water"  tabTitle="Distribuidoras" [root]="painelControleDistribuidorPage" tabBadge="{{distribuidorNaoHomoloado}}" tabBadgeStyle="danger" ></ion-tab>
-      </ion-tabs>
+  <ion-tabs #tab color="customColor1"  selectedIndex="0"> 
+    <ion-tab tabIcon="settings" tabTitle="Perfis" [root]="perfilListPage"></ion-tab>
+    <ion-tab tabIcon="people" tabTitle="Grupos" [root]="grupoUsuarioPage"></ion-tab>
+    <ion-tab tabIcon="bookmarks" tabTitle="Catalogo" [root]="catalogoProdutosPage"></ion-tab>
+    <ion-tab tabIcon="water" tabTitle="Distribuidoras" [root]="painelControleDistribuidorPage" tabBadge="{{distribuidorNaoHomoloado}}"
+      tabBadgeStyle="danger"></ion-tab>
+  </ion-tabs>
 </ion-content>
