Correção de Bugs

--- a/src/pages/painel-distribuidor/painel-distribuidor-config/painel-distribuidor-config.html
+++ b/src/pages/painel-distribuidor/painel-distribuidor-config/painel-distribuidor-config.html
@@ -9,11 +9,11 @@
   
       <div>
         <ion-segment [(ngModel)]="configuracao">
-          <ion-segment-button value="geral">
-            Geral
-          </ion-segment-button>
           <ion-segment-button value="funcionarios">
-            Funcionários
+            Equipe
+          </ion-segment-button>
+          <ion-segment-button value="geral">
+            Meus dados
           </ion-segment-button>
         </ion-segment>
       </div>
