--- a/src/pages/painel-distribuidor/painel-distribuidor.html
+++ b/src/pages/painel-distribuidor/painel-distribuidor.html
@@ -1,14 +1,13 @@
 <ion-header class="content-desktop">
     
       <ion-navbar>
-        <ion-title>Painel do Distribuidor</ion-title>
+        <ion-title>Painel do Distribuidor - {{distribuidor?.dist_nome}}</ion-title>
       </ion-navbar>
     
     </ion-header>
     <ion-content class="tab-desktop">
-      <ion-tabs #tab color="customColor1" selectedIndex="0">
+      <ion-tabs #tab color="customColor1" selectedIndex="0" *ngIf='distribuidor'>
         <ion-tab tabIcon="settings" tabTitle="Meus Dados" [root]="painelDistribuidorConfigPage" [rootParams]='distribuidor'></ion-tab>
-        <ion-tab tabIcon="bookmark" tabTitle="Catálogo" [root]="catalogoProdutoDistribuidorPage"></ion-tab>
-
+        <ion-tab tabIcon="bookmark" tabTitle="Catálogo" [root]="catalogoProdutoDistribuidorPage" [rootParams]='distribuidor'></ion-tab>
       </ion-tabs>
     </ion-content>
