Painel de pedidos

--- a/src/pages/painel-pedidos/painel-pedidos.html
+++ b/src/pages/painel-pedidos/painel-pedidos.html
@@ -2,7 +2,7 @@
   <div class="content-desktop-inside">
     <ion-grid>
       <ion-row>
-        <ion-col col-12 col-xl-6 *ngFor='let distribuidor of distribuidorSrvc.distribuidores | async'>
+        <ion-col col-12 col-xl-6 *ngFor='let distribuidor of distribuidores'>
           <ion-item (click)="listaProdutos(distribuidor)">
             <ion-thumbnail item-start>
               <img *ngIf="!distribuidor.dist_img" src="assets/img/appicon.png">
@@ -10,6 +10,8 @@
             </ion-thumbnail>
             <h2> {{ distribuidor.dist_nome }} </h2>
             <p> {{ distribuidor.dist_endereco.bairro }}</p>
+            <p *ngIf='!distribuidor.dist_distancia_text'> calculando ...</p>
+            <p *ngIf='distribuidor.dist_distancia_text'> {{ distribuidor.dist_distancia_text }} - {{ distribuidor.dist_duracao_text }}</p>
           </ion-item>
         </ion-col>
       </ion-row>
