--- a/src/index.html
+++ b/src/index.html
@@ -36,7 +36,7 @@
   <script src="build/vendor.js"></script>
   <!-- The bundle js is generated during the build process -->
   <script src="build/main.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDvkH1UJdEJIqwuk_oORlsdaJHBuHRn9lE"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?libraries=places&key=AIzaSyDvkH1UJdEJIqwuk_oORlsdaJHBuHRn9lE"></script>
   
 </body>
 </html>
