--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -1,5 +1,6 @@
 <ion-content scroll="false">
-  <div class="splash-info">
+    <div class="splash-info">
+    <endereco-autocomplete></endereco-autocomplete>
     <div class="splash-logo"></div>
     <div class="splash-intro">
       {{ 'WELCOME_INTRO' | translate }}
