--- a/src/pages/welcome/welcome.html
+++ b/src/pages/welcome/welcome.html
@@ -1,10 +1,12 @@
 <ion-content scroll="false">
-    <div class="splash-info">
-    <endereco-autocomplete></endereco-autocomplete>
+  <div class="splash-info">
     <div class="splash-logo"></div>
-    <div class="splash-intro">
+    <h1 ion-text color="customColor2">
+      Água Mineral App
+    </h1>
+    <h5 >
       {{ 'WELCOME_INTRO' | translate }}
-    </div>
+    </h5>
     <ion-grid>
       <ion-row>
         <ion-col col-12 col-sm-10 col-md-8 col-lg-6 col-xl-5 class="center-col">
