--- a/src/pages/painel-pedidos/pedido-list-produtos/pedido-list-produtos.html
+++ b/src/pages/painel-pedidos/pedido-list-produtos/pedido-list-produtos.html
@@ -41,4 +41,17 @@
       </div>
     </div>
   </div>
+  <ion-card class='carrinho' no-margin>
+      <ion-list>
+        <ion-item>
+            <h2>1 Item </h2>
+            <p>R$ 99,99 </p>
+            <button ion-button large  icon-rigth item-end>
+                Ver Carrinho 
+                <ion-icon name="cart"></ion-icon>                
+            </button>            
+          </ion-item>
+      </ion-list>
+    </ion-card>
+  
 </ion-content>
